favicon and rounded key info

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   <![endif]-->
+<link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
 <div class="container">
@@ -39,17 +40,17 @@
 <p>Pony controls on the keyboard are:</p>
 
 <ol>
-    <li class="pony1"><span>Arrow Keys</span></li>
-    <li class="pony2"><span>WASD</span></li>
-    <li class="pony3"><span>8456</span> (Numpad)</li>
-    <li class="pony4"><span>IJKL</span></li>
+    <li class="key pony1"><span>Arrow Keys</span></li>
+    <li class="key pony2"><span>WASD</span></li>
+    <li class="key pony3"><span>8456</span> (Numpad)</li>
+    <li class="kes pony4"><span>IJKL</span></li>
 </ol>
 <p>Additional key controls:</p>
 
 <ul>
-<li class="genkey"><span>F1</span> toggles music</li>
-<li class="genkey"><span>F12</span> takes a screenshot</li>
-<li class="genkey"><span>ESC</span> returns to the previous menu or exits the game from the main menu</li>
+<li class="key genkey"><span>F1</span> toggles music</li>
+<li class="key genkey"><span>F12</span> takes a screenshot</li>
+<li class="key genkey"><span>ESC</span> returns to the previous menu or exits the game from the main menu</li>
 </ul>
 
 <p>If you have problems with more than two players on one keyboard, you can attach additional USB keyboards.</p>
