--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <a target="_blank" href="pinkpony2.jpg"><img class="rimg" src="pinkpony2.jpg"></a>
 </div>
 <p>
-<h1>Pink Pony</h1> is a colorful tron-like 3D racing game with ponies with computer-controlled opponents, as well as multiplayer split-screen support for up to four people via keyboard or game controller.</p>
+<h1>Pink Pony</h1> is a colorful tron-like 3D racing game with ponies and computer-controlled opponents, as well as multiplayer split-screen support for up to four people via keyboard or game controller.</p>
 
 <p>Pink Pony can be played both on <strong>Linux</strong> and <strong>Windows</strong> and is both <strong>free</strong> and <strong>open source</strong> (see <a href="https://github.com/ginkgo/pink-pony/blob/master/README">readme text</a>).</p>
 
